# clinical-contract

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  visit.parquet
.github/workflows/: ci.yml  deploy-pages.yml
examples/: example_contract.yaml
scripts/: generate_site_type_catalog.py  generate_site_version.py
site/: README.md  app.css  app.js  docs.html  editor.html  index.html  pyscript.toml
site/css/: base.css  build-input.mjs  tailwind.css  tailwind.input.css  theme-dark.css
site/css/src/: base.css
site/css/src/components/: buttons.css  dark-theme.css  docs.css  editor-data.css  landing.css  modals.css  preview.css  responsive.css  results.css  runtime.css  schema-builder.css  schema-columns.css  schema-quality.css  schema-team.css  shell.css
site/docs/: documentation.md
site/examples/: contract.yaml  example_contract.yaml
site/js/: constants.js  contract-codec.js  data-storage.js  data.js  docs.js  editor.js  include-html.js  landing.js  results.js  runtime.js  schema.js  site-shell.js  site-version.js  type-catalog.js  ui.js
site/partials/: data-panel.html  editor-panel.html  header.html  runtime-footer.html  split-resizer.html
site/python/: bridge.py  clinical_contract
site/tests/: contract-codec.test.js  data-storage.test.js  data.test.js  docs-page.test.js  editor.test.js  landing-page.test.js  pyscript-config.test.js  results.test.js  schema.test.js  site-version.test.js  type-catalog.test.js  ui.test.js
src/clinical_contract/: __init__.py  backends.py  cli.py  contract.py  loader.py  models.py  type_catalog.py
test_file/: datacontract.yaml  export.parquet
tests/: test_cli.py  test_contract.py  test_web.py
ui/: .gitignore  CLAUDE.md  Makefile  build.py  pyproject.toml
ui/static/js/: app.js
ui/static/py/: contract_bridge.py
ui/templates/: _base.html  index.html
ui/templates/_partials/: _checker_panel.html  _checker_statusbar.html  _checker_toolbar.html  _editor_panel.html  _editor_statusbar.html  _editor_toolbar.html  _header.html  _results_table.html  _statusbar.html
