[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-contract"
version = "0.0.1"
description = "Valide des data contracts YAML cliniques contre des fichiers Parquet"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

# La commande terminal
[project.scripts]
clinical-contract = "clinical_contract.cli:main"

[project.optional-dependencies]
duckdb  = ["duckdb>=0.10"]
polars  = ["polars>=0.20", "pyarrow>=14.0"]
pyarrow = ["pyarrow>=14.0"]
all     = ["duckdb>=0.10", "polars>=0.20", "pyarrow>=14.0"]
dev     = ["pytest", "pytest-cov", "ruff", "duckdb>=0.10", "polars>=0.20", "pyarrow>=14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_contract"]

[tool.ruff]
line-length = 88


[tool.pytest.ini_options]
testpaths = ["tests"]
